@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2022, 2022 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2020 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -16,6 +17,12 @@
 
 package com.sun.ejb.containers.interceptors;
 
+import static com.sun.ejb.EJBUtils.loadGeneratedSerializableClass;
+import static com.sun.enterprise.deployment.LifecycleCallbackDescriptor.CallbackType.POST_ACTIVATE;
+import static com.sun.enterprise.deployment.LifecycleCallbackDescriptor.CallbackType.PRE_PASSIVATE;
+import static java.util.logging.Level.CONFIG;
+import static java.util.logging.Level.FINE;
+
 import java.io.Serializable;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
@@ -31,7 +38,6 @@ import java.util.logging.Logger;
 import org.glassfish.ejb.deployment.descriptor.EjbDescriptor;
 import org.glassfish.ejb.deployment.descriptor.EjbSessionDescriptor;
 
-import com.sun.ejb.EJBUtils;
 import com.sun.ejb.containers.BaseContainer;
 import com.sun.ejb.containers.EJBContextImpl;
 import com.sun.enterprise.container.common.spi.util.InterceptorInfo;
@@ -45,15 +51,12 @@ import jakarta.annotation.PostConstruct;
 import jakarta.ejb.EJBException;
 import jakarta.interceptor.InvocationContext;
 
-
 /**
- * UserInterceptorsManager manages UserInterceptors. There
- * is one instance of InterceptorManager per container.
+ * UserInterceptorsManager manages UserInterceptors. There is one instance of InterceptorManager per container.
  *
  * @author Mahesh Kannan
  */
 public class InterceptorManager {
-
 
     // The following are set when initializing EJB interceptors
     private BaseContainer container;
@@ -64,24 +67,23 @@ public class InterceptorManager {
 
     private final ClassLoader loader;
 
-    private final Class beanClass;
+    private final Class<?> beanClass;
 
     private final String beanClassName;
 
     private final Logger _logger;
 
-    private Class[] interceptorClasses;
+    private Class<?>[] interceptorClasses;
 
-    private Class[] serializableInterceptorClasses;
+    private Class<?>[] serializableInterceptorClasses;
 
-    private final Map<String, Integer> instanceIndexMap
-            = new HashMap<>();
+    private final Map<String, Integer> instanceIndexMap = new HashMap<>();
 
     private boolean interceptorsExists;
 
     private String[] pre30LCMethodNames;
 
-    private Class[] lcAnnotationClasses;
+    private Class<?>[] lcAnnotationClasses;
 
     private CallbackChainImpl[] callbackChain;
 
@@ -90,10 +92,7 @@ public class InterceptorManager {
 
     List<InterceptorDescriptor> frameworkInterceptors = new LinkedList<>();
 
-
-    public InterceptorManager(Logger _logger, BaseContainer container,
-                              Class[] lcAnnotationClasses, String[] pre30LCMethodNames)
-            throws Exception {
+    public InterceptorManager(Logger _logger, BaseContainer container, Class<?>[] lcAnnotationClasses, String[] pre30LCMethodNames) throws Exception {
         this._logger = _logger;
         this.container = container;
         this.lcAnnotationClasses = lcAnnotationClasses;
@@ -108,24 +107,17 @@ public class InterceptorManager {
 
         buildEjbInterceptorChain();
 
-        if (_logger.isLoggable(Level.FINE)) {
-            _logger.log(Level.FINE, "InterceptorManager: " + toString());
-        }
+        _logger.log(FINE, () -> "InterceptorManager: " + toString());
     }
 
-    public InterceptorManager(Logger _logger, ClassLoader classLoader, String className,
-                              InterceptorInfo interceptorInfo)
-            throws Exception {
+    public InterceptorManager(Logger _logger, ClassLoader classLoader, String className, InterceptorInfo interceptorInfo) throws Exception {
         this._logger = _logger;
-
-
-        loader = classLoader;
-        beanClassName = className;
-
+        this.loader = classLoader;
+        this.beanClassName = className;
         this.beanClass = loader.loadClass(beanClassName);
-
         this.interceptorInfo = interceptorInfo;
-        if( interceptorInfo.getSupportRuntimeDelegate() ) {
+
+        if (interceptorInfo.getSupportRuntimeDelegate()) {
             frameworkInterceptors.add(SystemInterceptorProxy.createInterceptorDesc());
         }
 
@@ -137,20 +129,14 @@ public class InterceptorManager {
     // Alternatively, if the caller needs to instantiate the instances, call
     // getInterceptorClasses() and then initializeInterceptorInstances(Object[])
     public Object[] createInterceptorInstances() {
-        int size = serializableInterceptorClasses.length;
-        Object[] interceptors = new Object[size];
+        Object[] interceptors = new Object[serializableInterceptorClasses.length];
 
-        int newInstanceSize = serializableInterceptorClasses.length;
-
-        for (int index = 0; index < newInstanceSize; index++) {
-
-            Class clazz = serializableInterceptorClasses[index];
+        for (int index = 0; index <  serializableInterceptorClasses.length; index++) {
+            Class<?> clazz = serializableInterceptorClasses[index];
             try {
-                interceptors[index] = clazz.newInstance();
-            } catch (IllegalAccessException illEx) {
-                throw new RuntimeException(illEx);
-            } catch (InstantiationException instEx) {
-                throw new RuntimeException(instEx);
+                interceptors[index] = clazz.getDeclaredConstructor().newInstance();
+            } catch (ReflectiveOperationException | IllegalArgumentException | SecurityException e) {
+                throw new RuntimeException(e);
             }
 
         }
@@ -160,166 +146,140 @@ public class InterceptorManager {
         return interceptors;
     }
 
-    public Class[] getInterceptorClasses() {
+    public Class<?>[] getInterceptorClasses() {
         return serializableInterceptorClasses;
     }
 
     public void initializeInterceptorInstances(Object[] interceptorInstances) {
-
         for (int index = 0; index < interceptorInstances.length; index++) {
-            Class clazz = serializableInterceptorClasses[index];
+            Class<?> clazz = serializableInterceptorClasses[index];
 
-            if( SystemInterceptorProxy.class.isAssignableFrom(clazz) && (runtimeInterceptor != null) ) {
-                ((SystemInterceptorProxy)interceptorInstances[index]).setDelegate(runtimeInterceptor);
+            if (SystemInterceptorProxy.class.isAssignableFrom(clazz) && runtimeInterceptor != null) {
+                ((SystemInterceptorProxy) interceptorInstances[index]).setDelegate(runtimeInterceptor);
             }
         }
     }
 
-
     /**
-     * Can be called after original interceptor initialization.
-     * Install the given interceptor class instance before any application level interceptors.
+     * Can be called after original interceptor initialization. Install the given interceptor class instance before any
+     * application level interceptors.
      *
      * @param interceptor optionally specified delegate to be set on SystemInterceptorProxy
      */
     public void registerRuntimeInterceptor(Object interceptor) {
-        _logger.log(Level.CONFIG, "registerRuntimeInterceptor({0})", interceptor);
+        _logger.log(CONFIG, "registerRuntimeInterceptor({0})", interceptor);
         runtimeInterceptor = interceptor;
     }
 
-    public InterceptorManager.InterceptorChain getAroundInvokeChain(
-            MethodDescriptor mDesc, Method beanMethod) {
+    public InterceptorManager.InterceptorChain getAroundInvokeChain(MethodDescriptor mDesc, Method beanMethod) {
+        List<AroundInvokeInterceptor> interceptors = new ArrayList<>();
 
-        ArrayList<AroundInvokeInterceptor> interceptors =
-                new ArrayList<>();
-
-        for(InterceptorDescriptor interceptor : frameworkInterceptors) {
-            Set<LifecycleCallbackDescriptor> aroundInvokeDescs =
-                interceptor.getAroundInvokeDescriptors();
-            if(aroundInvokeDescs.isEmpty() ) {
+        for (InterceptorDescriptor interceptor : frameworkInterceptors) {
+            Set<LifecycleCallbackDescriptor> aroundInvokeDescriptors = interceptor.getAroundInvokeDescriptors();
+            if (aroundInvokeDescriptors.isEmpty()) {
                 continue;
             }
 
             List<LifecycleCallbackDescriptor> orderedAIInterceptors = null;
-            Class interceptorClass = interceptor.getInterceptorClass();
-            ClassLoader classLoaderToUse = (interceptorClass != null) ?
-                        interceptorClass.getClassLoader() : loader;
+            Class<?> interceptorClass = interceptor.getInterceptorClass();
+            ClassLoader classLoaderToUse = (interceptorClass != null) ? interceptorClass.getClassLoader() : loader;
+
             try {
                 orderedAIInterceptors = interceptor.getOrderedAroundInvokeDescriptors(classLoaderToUse);
             } catch (Exception e) {
-                throw new IllegalStateException("No AroundInvokeIntercetpors found "
-                + " on class " + interceptor.getInterceptorClassName(), e);
+                throw new IllegalStateException("No AroundInvokeIntercetpors found " + " on class " + interceptor.getInterceptorClassName(), e);
             }
-            addAroundInvokeInterceptors(interceptors, interceptor,
-                orderedAIInterceptors, interceptor.getInterceptorClassName(),
-                    classLoaderToUse);
+
+            addAroundInvokeInterceptors(
+                interceptors, interceptor, orderedAIInterceptors, interceptor.getInterceptorClassName(), classLoaderToUse);
         }
 
-
-        List<? extends InterceptorDescriptor> list = (ejbDesc != null) ?
+        List<? extends InterceptorDescriptor> interceptorDescriptors = ejbDesc != null ?
                 ejbDesc.getAroundInvokeInterceptors(mDesc) :
                 interceptorInfo.getAroundInvokeInterceptors(beanMethod);
 
-
-        for (InterceptorDescriptor interceptor : list) {
-            String className = interceptor.getInterceptorClassName();
-            Set<LifecycleCallbackDescriptor> aroundInvokeDescs =
-                interceptor.getAroundInvokeDescriptors();
-            if(aroundInvokeDescs.isEmpty() ) {
+        for (InterceptorDescriptor interceptorDescriptor : interceptorDescriptors) {
+            String className = interceptorDescriptor.getInterceptorClassName();
+            Set<LifecycleCallbackDescriptor> aroundInvokeDescs = interceptorDescriptor.getAroundInvokeDescriptors();
+            if (aroundInvokeDescs.isEmpty()) {
                 continue;
             }
 
             List<LifecycleCallbackDescriptor> orderedAIInterceptors = null;
             try {
-                orderedAIInterceptors = interceptor.getOrderedAroundInvokeDescriptors(loader);
+                orderedAIInterceptors = interceptorDescriptor.getOrderedAroundInvokeDescriptors(loader);
             } catch (Exception e) {
-               throw new IllegalStateException("No AroundInvokeIntercetpors found "
-                   + " on class " + className, e);
+                throw new IllegalStateException("No AroundInvokeIntercetpors found " + " on class " + className, e);
             }
 
-            addAroundInvokeInterceptors(interceptors, interceptor,
+            addAroundInvokeInterceptors(
+                interceptors, interceptorDescriptor,
                 orderedAIInterceptors, className,
-                interceptor.getInterceptorClass() != null ? interceptor.getInterceptorClass().getClassLoader() : loader);
+                interceptorDescriptor.getInterceptorClass() != null ? interceptorDescriptor.getInterceptorClass().getClassLoader() : loader);
         }
 
-        AroundInvokeInterceptor[] inter = interceptors.toArray(
-                new AroundInvokeInterceptor[interceptors.size()]);
-        return new AroundInvokeChainImpl(inter);
+        return new AroundInvokeChainImpl(interceptors.toArray(new AroundInvokeInterceptor[interceptors.size()]));
     }
 
-    public InterceptorManager.InterceptorChain getAroundTimeoutChain(
-            MethodDescriptor mDesc, Method beanMethod) {
+    public InterceptorManager.InterceptorChain getAroundTimeoutChain(MethodDescriptor methodDescriptor, Method beanMethod) {
+        List<AroundInvokeInterceptor> interceptors = new ArrayList<>();
 
-
-        ArrayList<AroundInvokeInterceptor> interceptors =
-                new ArrayList<>();
-
-
-        for(InterceptorDescriptor interceptor : frameworkInterceptors) {
-            Set<LifecycleCallbackDescriptor> aroundTimeoutDescs =
-                interceptor.getAroundTimeoutDescriptors();
-            if(aroundTimeoutDescs.isEmpty() ) {
+        for (InterceptorDescriptor frameworkInterceptor : frameworkInterceptors) {
+            Set<LifecycleCallbackDescriptor> aroundTimeoutDescriptors = frameworkInterceptor.getAroundTimeoutDescriptors();
+            if (aroundTimeoutDescriptors.isEmpty()) {
                 continue;
             }
 
             List<LifecycleCallbackDescriptor> orderedAIInterceptors = null;
-            Class interceptorClass = interceptor.getInterceptorClass();
-            ClassLoader classLoaderToUse = (interceptorClass != null) ?
-                        interceptorClass.getClassLoader() : loader;
+            Class<?> interceptorClass = frameworkInterceptor.getInterceptorClass();
+            ClassLoader classLoaderToUse = interceptorClass != null ? interceptorClass.getClassLoader() : loader;
+
             try {
-                orderedAIInterceptors = interceptor.getOrderedAroundTimeoutDescriptors(classLoaderToUse);
+                orderedAIInterceptors = frameworkInterceptor.getOrderedAroundTimeoutDescriptors(classLoaderToUse);
             } catch (Exception e) {
-                throw new IllegalStateException("No AroundTimeoutIntercetpors found "
-                + " on class " + interceptor.getInterceptorClassName(), e);
+                throw new IllegalStateException(
+                    "No AroundTimeoutIntercetpors found " + " on class " + frameworkInterceptor.getInterceptorClassName(), e);
             }
-            addAroundInvokeInterceptors(interceptors, interceptor,
-                orderedAIInterceptors, interceptor.getInterceptorClassName(),
-                    classLoaderToUse);
+
+            addAroundInvokeInterceptors(
+                interceptors,
+                frameworkInterceptor,
+                orderedAIInterceptors,
+                frameworkInterceptor.getInterceptorClassName(),
+                classLoaderToUse);
         }
 
-        List<EjbInterceptor> list = (ejbDesc != null) ?
-                ejbDesc.getAroundTimeoutInterceptors(mDesc) :
-                new LinkedList<>();
+        List<EjbInterceptor> aroundTimeoutInterceptors = ejbDesc != null ? ejbDesc.getAroundTimeoutInterceptors(methodDescriptor) : new LinkedList<>();
 
-        for (EjbInterceptor interceptor : list) {
-            String className = interceptor.getInterceptorClassName();
-            Set<LifecycleCallbackDescriptor> aroundTimeoutDescs =
-                interceptor.getAroundTimeoutDescriptors();
-            if(aroundTimeoutDescs.isEmpty() ) {
+        for (EjbInterceptor aroundTimeoutInterceptor : aroundTimeoutInterceptors) {
+            String className = aroundTimeoutInterceptor.getInterceptorClassName();
+            Set<LifecycleCallbackDescriptor> aroundTimeoutDescs = aroundTimeoutInterceptor.getAroundTimeoutDescriptors();
+            if (aroundTimeoutDescs.isEmpty()) {
                 continue;
             }
 
             List<LifecycleCallbackDescriptor> orderedATInterceptors;
             try {
-                orderedATInterceptors = interceptor.getOrderedAroundTimeoutDescriptors(loader);
+                orderedATInterceptors = aroundTimeoutInterceptor.getOrderedAroundTimeoutDescriptors(loader);
             } catch (Exception e) {
-               throw new IllegalStateException("No AroundTimeoutIntercetpors found "
-                   + " on class " + className, e);
+                throw new IllegalStateException("No AroundTimeoutIntercetpors found " + " on class " + className, e);
             }
-            addAroundInvokeInterceptors(interceptors, interceptor,
-                    orderedATInterceptors, className, loader);
+            addAroundInvokeInterceptors(interceptors, aroundTimeoutInterceptor, orderedATInterceptors, className, loader);
         }
 
-        AroundInvokeInterceptor[] inter = interceptors.toArray(
-                new AroundInvokeInterceptor[interceptors.size()]);
-        return new AroundInvokeChainImpl(inter);
+        return new AroundInvokeChainImpl(interceptors.toArray(new AroundInvokeInterceptor[interceptors.size()]));
     }
 
-    private void addAroundInvokeInterceptors(
-            List<AroundInvokeInterceptor> interceptors,
-            InterceptorDescriptor interceptor,
-            List<LifecycleCallbackDescriptor> orderedInterceptors,
-            String className,
-            ClassLoader classLoaderToUse) {
+    private void addAroundInvokeInterceptors(List<AroundInvokeInterceptor> interceptors, InterceptorDescriptor interceptor,
+            List<LifecycleCallbackDescriptor> orderedInterceptors, String className, ClassLoader classLoaderToUse) {
 
-        for(LifecycleCallbackDescriptor desc : orderedInterceptors) {
+        for (LifecycleCallbackDescriptor desc : orderedInterceptors) {
             Method method = null;
             try {
                 method = desc.getLifecycleCallbackMethodObject(classLoaderToUse);
-            } catch(Exception e) {
-               throw new IllegalStateException("No callback method of name " +
-                       desc.getLifecycleCallbackMethod()
-               + " found on class " + className, e);
+            } catch (Exception e) {
+                throw new IllegalStateException(
+                    "No callback method of name " + desc.getLifecycleCallbackMethod() + " found on class " + className, e);
             }
 
             if (interceptor.getFromBeanClass()) {
@@ -330,9 +290,8 @@ public class InterceptorManager {
                 if (index == -1) {
                     throw new IllegalStateException(getInternalErrorString(className));
                 }
-                Class clazz = interceptorClasses[index];
-                _logger.log(Level.FINE, "*[md.getDeclaredMethod() => "
-                            + method + " FOR CLAZZ: " + clazz);
+                Class<?> clazz = interceptorClasses[index];
+                _logger.log(FINE, "*[md.getDeclaredMethod() => " + method + " FOR CLAZZ: " + clazz);
                 interceptors.add(new AroundInvokeInterceptor(index, method));
             }
         }
@@ -342,39 +301,29 @@ public class InterceptorManager {
         return this.interceptorsExists;
     }
 
-    public Object intercept(InterceptorManager.InterceptorChain chain,
-                            AroundInvokeContext ctx)
-            throws Throwable {
+    public Object intercept(InterceptorManager.InterceptorChain chain, AroundInvokeContext ctx) throws Throwable {
         return chain.invokeNext(0, ctx);
     }
 
-    public boolean intercept(CallbackType eventType, EJBContextImpl ctx)
-            throws Throwable {
-
+    public boolean intercept(CallbackType eventType, EJBContextImpl ctx) throws Throwable {
         return intercept(eventType, ctx.getEJB(), ctx.getInterceptorInstances(), ctx);
     }
 
-    public boolean intercept(CallbackType eventType, Object targetObject,
-                             Object[] interceptorInstances)
-            throws Throwable {
+    public boolean intercept(CallbackType eventType, Object targetObject, Object[] interceptorInstances) throws Throwable {
         return intercept(eventType, targetObject, interceptorInstances, null);
     }
 
-    public boolean intercept(CallbackType eventType, Object targetObject,
-                             Object[] interceptorInstances, EJBContextImpl ctx)
-            throws Throwable {
-
+    public boolean intercept(CallbackType eventType, Object targetObject, Object[] interceptorInstances, EJBContextImpl ctx) throws Throwable {
         CallbackChainImpl chain = null;
         CallbackInvocationContext invContext = null;
+
         switch (eventType) {
             case AROUND_CONSTRUCT:
                 chain = callbackChain[eventType.ordinal()];
                 if (container != null) {
-                    invContext = new CallbackInvocationContext(beanClass,
-                            interceptorInstances, chain, eventType, container, ctx);
+                    invContext = new CallbackInvocationContext(beanClass, interceptorInstances, chain, eventType, container, ctx);
                 } else {
-                    invContext = new CallbackInvocationContext(beanClass,
-                            interceptorInstances, chain, eventType, interceptorInfo);
+                    invContext = new CallbackInvocationContext(beanClass, interceptorInstances, chain, eventType, interceptorInfo);
                 }
                 if (chain != null) {
                     chain.invokeNext(0, invContext);
@@ -385,8 +334,7 @@ public class InterceptorManager {
             case POST_ACTIVATE:
             case PRE_DESTROY:
                 chain = callbackChain[eventType.ordinal()];
-                invContext = new CallbackInvocationContext(targetObject,
-                        interceptorInstances, chain, eventType);
+                invContext = new CallbackInvocationContext(targetObject, interceptorInstances, chain, eventType);
                 if (chain != null) {
                     chain.invokeNext(0, invContext);
                 }
@@ -402,9 +350,7 @@ public class InterceptorManager {
         return interceptorInfo.getTargetObjectInstance();
     }
 
-    private void buildEjbInterceptorChain()
-            throws Exception {
-
+    private void buildEjbInterceptorChain() throws Exception {
         Set<Class<?>> listOfClasses = new HashSet<>();
 
         for (EjbInterceptor ejbInterceptor : ejbDesc.getInterceptorClasses()) {
@@ -417,9 +363,9 @@ public class InterceptorManager {
 
         // Add framework interceptors to list, but check for existence of
         // class before attempting to load it via application class loader
-        for(InterceptorDescriptor frameworkInterceptor : frameworkInterceptors) {
-            Class clazz = frameworkInterceptor.getInterceptorClass();
-            if( clazz == null ) {
+        for (InterceptorDescriptor frameworkInterceptor : frameworkInterceptors) {
+            Class<?> clazz = frameworkInterceptor.getInterceptorClass();
+            if (clazz == null) {
                 clazz = loader.loadClass(frameworkInterceptor.getInterceptorClassName());
             }
             listOfClasses.add(clazz);
@@ -428,26 +374,22 @@ public class InterceptorManager {
 
         initInterceptorClasses(listOfClasses);
 
-        interceptorsExists = (listOfClasses.size() > 0) ||
-            ejbDesc.hasAroundInvokeMethod() || ejbDesc.hasAroundTimeoutMethod();
+        interceptorsExists = (listOfClasses.size() > 0) || ejbDesc.hasAroundInvokeMethod() || ejbDesc.hasAroundTimeoutMethod();
 
         initEjbCallbackIndices();
     }
 
-    private void buildInterceptorChain(InterceptorInfo interceptorInfo)
-            throws Exception {
-
-
+    private void buildInterceptorChain(InterceptorInfo interceptorInfo) throws Exception {
         Set<Class<?>> listOfClasses = new HashSet<>();
-        for(String name : interceptorInfo.getInterceptorClassNames()) {
-            listOfClasses.add( loader.loadClass(name));
+        for (String name : interceptorInfo.getInterceptorClassNames()) {
+            listOfClasses.add(loader.loadClass(name));
         }
 
         // Add framework interceptors to list, but check for existence of
         // class before attempting to load it via application class loader
-        for(InterceptorDescriptor frameworkInterceptor : frameworkInterceptors) {
-            Class clazz = frameworkInterceptor.getInterceptorClass();
-            if( clazz == null ) {
+        for (InterceptorDescriptor frameworkInterceptor : frameworkInterceptors) {
+            Class<?> clazz = frameworkInterceptor.getInterceptorClass();
+            if (clazz == null) {
                 clazz = loader.loadClass(frameworkInterceptor.getInterceptorClassName());
             }
             listOfClasses.add(clazz);
@@ -455,8 +397,7 @@ public class InterceptorManager {
 
         initInterceptorClasses(listOfClasses);
 
-        interceptorsExists = (listOfClasses.size() > 0) ||
-            interceptorInfo.getHasTargetClassAroundInvoke();
+        interceptorsExists = (listOfClasses.size() > 0) || interceptorInfo.getHasTargetClassAroundInvoke();
 
         int size = CallbackType.values().length;
         callbackChain = new CallbackChainImpl[size];
@@ -467,32 +408,27 @@ public class InterceptorManager {
 
     }
 
-
-    private void initInterceptorClasses(Set<Class<?>> classes) throws  Exception {
-
+    private void initInterceptorClasses(Set<Class<?>> classes) throws Exception {
         int size = classes.size();
         interceptorClasses = new Class[size];
         serializableInterceptorClasses = new Class[size];
         int index = 0;
+
         for (Class<?> interClass : classes) {
             interceptorClasses[index] = interClass;
             serializableInterceptorClasses[index] = interClass;
             instanceIndexMap.put(interClass.getName(), index);
             if (!Serializable.class.isAssignableFrom(interClass)) {
-                serializableInterceptorClasses[index] = EJBUtils
-                    .loadGeneratedSerializableClass(interClass.getClassLoader(), interClass);
+                serializableInterceptorClasses[index] = loadGeneratedSerializableClass(interClass.getClassLoader(), interClass);
             }
             index++;
         }
-
 
         // bean class is never accessed from instanceIndexMap so it's
         // never added.
     }
 
-    private void initEjbCallbackIndices()
-            throws ClassNotFoundException, Exception {
-
+    private void initEjbCallbackIndices() throws ClassNotFoundException, Exception {
         int size = CallbackType.values().length;
         ArrayList[] callbacks = new ArrayList[size];
         boolean scanFor2xLifecycleMethods = true;
@@ -501,9 +437,8 @@ public class InterceptorManager {
             int index = eventType.ordinal();
             callbacks[index] = new ArrayList<CallbackInterceptor>();
             boolean scanForCallbacks = true;
-            if (! (ejbDesc instanceof EjbSessionDescriptor)) {
-                if ((eventType == CallbackType.PRE_PASSIVATE) ||
-                        (eventType == CallbackType.POST_ACTIVATE)) {
+            if (!(ejbDesc instanceof EjbSessionDescriptor)) {
+                if (eventType == PRE_PASSIVATE || eventType == POST_ACTIVATE) {
                     scanForCallbacks = false;
                 }
             }
@@ -511,16 +446,14 @@ public class InterceptorManager {
             if (scanForCallbacks) {
 
                 // Make sure any framework interceptors are first
-                for(InterceptorDescriptor callback : frameworkInterceptors) {
-                    if( callback.hasCallbackDescriptor(eventType)) {
+                for (InterceptorDescriptor callback : frameworkInterceptors) {
+                    if (callback.hasCallbackDescriptor(eventType)) {
                         Class interceptorClass = callback.getInterceptorClass();
-                        ClassLoader classLoaderToUse = (interceptorClass != null) ?
-                                interceptorClass.getClassLoader() : loader;
-                        List<CallbackInterceptor> inters = createCallbackInterceptors(eventType, callback,
-                                classLoaderToUse);
+                        ClassLoader classLoaderToUse = (interceptorClass != null) ? interceptorClass.getClassLoader() : loader;
+                        List<CallbackInterceptor> inters = createCallbackInterceptors(eventType, callback, classLoaderToUse);
                         for (CallbackInterceptor inter : inters) {
                             callbacks[index].add(inter);
-                            if( eventType == CallbackType.POST_CONSTRUCT) {
+                            if (eventType == CallbackType.POST_CONSTRUCT) {
                                 numPostConstructFrameworkCallbacks++;
                             }
                         }
@@ -531,7 +464,7 @@ public class InterceptorManager {
 
                 // If there are any application-specified callbacks in metadata, there's no need
                 // to scan for the old 2.x style lifecycle methods
-                if( callbackList.size() > 0 ) {
+                if (callbackList.size() > 0) {
                     scanFor2xLifecycleMethods = false;
                 }
 
@@ -549,10 +482,10 @@ public class InterceptorManager {
             load2xLifecycleMethods(callbacks);
         }
 
-        //The next set of lines are to handle the case where
-        //  the app doesn't have a @PostConstruct or it
-        //  doesn't implement the EntrerpriseBean interface
-        //  In this case we scan for ejbCreate() for MDBs and SLSBs
+        // The next set of lines are to handle the case where
+        // the app doesn't have a @PostConstruct or it
+        // doesn't implement the EntrerpriseBean interface
+        // In this case we scan for ejbCreate() for MDBs and SLSBs
         boolean lookForEjbCreateMethod = container.scanForEjbCreateMethod();
 
         if (lookForEjbCreateMethod) {
@@ -563,26 +496,22 @@ public class InterceptorManager {
         for (CallbackType eventType : CallbackType.values()) {
             int index = eventType.ordinal();
             CallbackInterceptor[] interceptors = (CallbackInterceptor[])
-                    callbacks[index].toArray(new CallbackInterceptor[callbacks[index].size()]);
+                callbacks[index].toArray(new CallbackInterceptor[callbacks[index].size()]);
             callbackChain[index] = new CallbackChainImpl(interceptors);
         }
 
     }
 
-    private void initCallbackIndices(List<InterceptorDescriptor> callbackList,
-                                     CallbackType callbackType) throws Exception {
-
-        ArrayList<CallbackInterceptor> callbacks = new ArrayList<>();
+    private void initCallbackIndices(List<InterceptorDescriptor> callbackList, CallbackType callbackType) throws Exception {
+        List<CallbackInterceptor> callbacks = new ArrayList<>();
 
         int index = callbackType.ordinal();
 
-        for(InterceptorDescriptor callback : frameworkInterceptors) {
-            if( callback.hasCallbackDescriptor(callbackType)) {
-                Class interceptorClass = callback.getInterceptorClass();
-                ClassLoader classLoaderToUse = (interceptorClass != null) ?
-                        interceptorClass.getClassLoader() : loader;
-                List<CallbackInterceptor> inters = createCallbackInterceptors(callbackType, callback,
-                        classLoaderToUse);
+        for (InterceptorDescriptor callback : frameworkInterceptors) {
+            if (callback.hasCallbackDescriptor(callbackType)) {
+                Class<?> interceptorClass = callback.getInterceptorClass();
+                ClassLoader classLoaderToUse = (interceptorClass != null) ? interceptorClass.getClassLoader() : loader;
+                List<CallbackInterceptor> inters = createCallbackInterceptors(callbackType, callback, classLoaderToUse);
                 for (CallbackInterceptor inter : inters) {
                     callbacks.add(inter);
                 }
@@ -598,25 +527,19 @@ public class InterceptorManager {
 
         // move above callbackChain = new CallbackChainImpl[size];
 
-        CallbackInterceptor[] interceptors = callbacks.toArray(new CallbackInterceptor[callbacks.size()]);
-        callbackChain[index] = new CallbackChainImpl(interceptors);
-
+        callbackChain[index] = new CallbackChainImpl(callbacks.toArray(new CallbackInterceptor[callbacks.size()]));
     }
 
-    private List<CallbackInterceptor> createCallbackInterceptors(CallbackType eventType,
-                                                          InterceptorDescriptor inter) throws Exception {
+    private List<CallbackInterceptor> createCallbackInterceptors(CallbackType eventType, InterceptorDescriptor inter) throws Exception {
         // Create callback interceptors using loader provided at initialization time
         return createCallbackInterceptors(eventType, inter, loader);
 
     }
 
-    private List<CallbackInterceptor> createCallbackInterceptors(CallbackType eventType,
-                                                          InterceptorDescriptor inter,
-                                                          ClassLoader classLoaderToUse) throws Exception {
+    private List<CallbackInterceptor> createCallbackInterceptors(CallbackType eventType, InterceptorDescriptor inter, ClassLoader classLoaderToUse) throws Exception {
         List<CallbackInterceptor> callbackList = new ArrayList<>();
 
-        List<LifecycleCallbackDescriptor> orderedCallbackMethods =
-            inter.getOrderedCallbackDescriptors(eventType, classLoaderToUse);
+        List<LifecycleCallbackDescriptor> orderedCallbackMethods = inter.getOrderedCallbackDescriptors(eventType, classLoaderToUse);
 
         String className = inter.getInterceptorClassName();
 
@@ -624,10 +547,9 @@ public class InterceptorManager {
             Method method = null;
             try {
                 method = callbackDesc.getLifecycleCallbackMethodObject(classLoaderToUse);
-            } catch(Exception e) {
-                throw new IllegalStateException("No callback method of name " +
-                   callbackDesc.getLifecycleCallbackMethod()
-                   + " found on class " + className, e);
+            } catch (Exception e) {
+                throw new IllegalStateException(
+                        "No callback method of name " + callbackDesc.getLifecycleCallbackMethod() + " found on class " + className, e);
             }
 
             CallbackInterceptor interceptor = null;
@@ -648,7 +570,6 @@ public class InterceptorManager {
         return callbackList;
     }
 
-
     private void load2xLifecycleMethods(ArrayList<CallbackInterceptor>[] metaArray) {
 
         if (jakarta.ejb.EnterpriseBean.class.isAssignableFrom(beanClass)) {
@@ -658,27 +579,23 @@ public class InterceptorManager {
                     continue;
                 }
                 try {
-                    Method method = beanClass.getMethod(
-                            pre30LCMethodNames[i], (Class[]) null);
+                    Method method = beanClass.getMethod(pre30LCMethodNames[i], (Class[]) null);
                     if (method != null) {
-                        CallbackInterceptor meta =
-                                new BeanCallbackInterceptor(method);
+                        CallbackInterceptor meta = new BeanCallbackInterceptor(method);
                         metaArray[i].add(meta);
-                        _logger.log(Level.FINE, "**## bean has 2.x LM: " + meta);
+                        _logger.log(FINE, "**## bean has 2.x LM: " + meta);
                     }
                 } catch (NoSuchMethodException nsmEx) {
-                    //TODO: Log exception
-                    //Error for a 2.x bean????
+                    // TODO: Log exception
+                    // Error for a 2.x bean????
                 }
             }
         }
     }
 
-    //TODO: load2xLifecycleMethods and loadOnlyEjbCreateMethod can be
-    //  refactored to use a common method.
-    private void loadOnlyEjbCreateMethod(
-            ArrayList<CallbackInterceptor>[] metaArray,
-            int numPostConstructFrameworkCallbacks) {
+    // TODO: load2xLifecycleMethods and loadOnlyEjbCreateMethod can be
+    // refactored to use a common method.
+    private void loadOnlyEjbCreateMethod(ArrayList<CallbackInterceptor>[] metaArray, int numPostConstructFrameworkCallbacks) {
         int sz = lcAnnotationClasses.length;
         for (int i = 0; i < sz; i++) {
             if (lcAnnotationClasses[i] != PostConstruct.class) {
@@ -688,39 +605,35 @@ public class InterceptorManager {
             boolean needToScan = true;
             if (metaArray[i] != null) {
                 ArrayList<CallbackInterceptor> al = metaArray[i];
-                needToScan =  (al.size() == numPostConstructFrameworkCallbacks);
+                needToScan = (al.size() == numPostConstructFrameworkCallbacks);
             }
 
-            if (! needToScan) {
+            if (!needToScan) {
                 // We already have found a @PostConstruct method
                 // So just ignore any ejbCreate() method
                 break;
             } else {
                 try {
-                    Method method = beanClass.getMethod(pre30LCMethodNames[i],
-                            (Class[]) null);
+                    Method method = beanClass.getMethod(pre30LCMethodNames[i], (Class[]) null);
                     if (method != null) {
-                        CallbackInterceptor meta = new BeanCallbackInterceptor(
-                                method);
+                        CallbackInterceptor meta = new BeanCallbackInterceptor(method);
                         metaArray[i].add(meta);
-                        _logger.log(Level.FINE,
-                                "**##[ejbCreate] bean has 2.x style ejbCreate: " + meta);
+                        _logger.log(FINE, "**##[ejbCreate] bean has 2.x style ejbCreate: " + meta);
                     }
                 } catch (NoSuchMethodException nsmEx) {
                     // TODO: Log exception
-                    //Error for a 2.x bean????
+                    // Error for a 2.x bean????
                 }
             }
         }
     }
 
-
     @Override
     public String toString() {
         StringBuilder sbldr = new StringBuilder();
         sbldr.append("##########################################################\n");
-        sbldr.append("InterceptorManager<").append(beanClassName).append("> has ")
-                .append(interceptorClasses.length).append(" interceptors");
+        sbldr.append("InterceptorManager<").append(beanClassName).append("> has ").append(interceptorClasses.length)
+                .append(" interceptors");
         sbldr.append("\n\tbeanClassName: ").append(beanClassName);
         sbldr.append("\n\tInterceptors: ");
         for (Class clazz : interceptorClasses) {
@@ -731,8 +644,7 @@ public class InterceptorManager {
             sbldr.append("\n\tCallback Interceptors: ");
             for (int i = 0; i < lcAnnotationClasses.length; i++) {
                 CallbackChainImpl chain = callbackChain[i];
-                sbldr.append("\n\t").append(i)
-                        .append(": ").append(lcAnnotationClasses[i]);
+                sbldr.append("\n\t").append(i).append(": ").append(lcAnnotationClasses[i]);
                 sbldr.append("\n\t\t").append(chain.toString());
             }
         }
@@ -743,9 +655,7 @@ public class InterceptorManager {
 
     private String getInternalErrorString(String className) {
         StringBuilder sbldr = new StringBuilder("Internal error: ");
-        sbldr.append(" className: ").append(className)
-                .append(" is neither a bean class (")
-                .append(beanClassName).append(") nor an ")
+        sbldr.append(" className: ").append(className).append(" is neither a bean class (").append(beanClassName).append(") nor an ")
                 .append("interceptor class (");
         for (Class cn : interceptorClasses) {
             sbldr.append(cn.getName()).append("; ");
@@ -759,37 +669,29 @@ public class InterceptorManager {
 
         Object[] getInterceptorInstances();
 
-       /**
-        * Called from Interceptor Chain to invoke the actual bean method.
-        * This method must throw any exception from the bean method *as is*,
-        * without being wrapped in an InvocationTargetException.  The exception
-        * thrown from this method will be propagated through the application's
-        * interceptor code, so it must not be changed in order for any exception
-        * handling logic in that code to function properly.
-        */
-        Object invokeBeanMethod()
-            throws Throwable;
+        /**
+         * Called from Interceptor Chain to invoke the actual bean method. This method must throw any exception from the bean
+         * method *as is*, without being wrapped in an InvocationTargetException. The exception thrown from this method will be
+         * propagated through the application's interceptor code, so it must not be changed in order for any exception handling
+         * logic in that code to function properly.
+         */
+        Object invokeBeanMethod() throws Throwable;
 
     }
 
     public interface InterceptorChain {
-    Object invokeNext(int index, AroundInvokeContext invCtx)
-        throws Throwable;
+        Object invokeNext(int index, AroundInvokeContext invCtx) throws Throwable;
     }
-
-
 
 }
 
-class AroundInvokeChainImpl
-        implements InterceptorManager.InterceptorChain {
+class AroundInvokeChainImpl implements InterceptorManager.InterceptorChain {
     enum ChainType {
-        METHOD, CALLBACK}
-
+        METHOD, CALLBACK
+    }
 
     protected AroundInvokeInterceptor[] interceptors;
     protected int size;
-
 
     protected AroundInvokeChainImpl(AroundInvokeInterceptor[] interceptors) {
 
@@ -798,11 +700,8 @@ class AroundInvokeChainImpl
     }
 
     @Override
-    public Object invokeNext(int index, InterceptorManager.AroundInvokeContext inv)
-            throws Throwable {
-        return ( index < size ) ?
-            interceptors[index].intercept(inv) :
-            inv.invokeBeanMethod();
+    public Object invokeNext(int index, InterceptorManager.AroundInvokeContext inv) throws Throwable {
+        return (index < size) ? interceptors[index].intercept(inv) : inv.invokeBeanMethod();
     }
 
     @Override
@@ -816,7 +715,6 @@ class AroundInvokeChainImpl
     }
 }
 
-
 class AroundInvokeInterceptor {
     protected int index;
     protected Method method;
@@ -827,22 +725,22 @@ class AroundInvokeInterceptor {
 
         try {
             final Method finalM = method;
-            if(System.getSecurityManager() == null) {
+            if (System.getSecurityManager() == null) {
                 if (!finalM.isAccessible()) {
                     finalM.setAccessible(true);
                 }
             } else {
-                java.security.AccessController
-                        .doPrivileged(new java.security.PrivilegedExceptionAction() {
+                java.security.AccessController.doPrivileged(new java.security.PrivilegedExceptionAction() {
                     @Override
                     public java.lang.Object run() throws Exception {
                         if (!finalM.isAccessible()) {
                             finalM.setAccessible(true);
                         }
                         return null;
-                    }});
+                    }
+                });
             }
-        } catch(Exception e) {
+        } catch (Exception e) {
             throw new EJBException(e);
         }
 
@@ -852,19 +750,18 @@ class AroundInvokeInterceptor {
         try {
             final Object[] interceptors = invCtx.getInterceptorInstances();
 
-            if( System.getSecurityManager() != null ) {
-            // Wrap actual value insertion in doPrivileged to
-            // allow for private/protected field access.
-            return java.security.AccessController
-                    .doPrivileged(new java.security.PrivilegedExceptionAction() {
-                        @Override
-                        public java.lang.Object run() throws Exception {
-                            return method.invoke(interceptors[index], invCtx);
-                        }
-                    });
+            if (System.getSecurityManager() != null) {
+                // Wrap actual value insertion in doPrivileged to
+                // allow for private/protected field access.
+                return java.security.AccessController.doPrivileged(new java.security.PrivilegedExceptionAction() {
+                    @Override
+                    public java.lang.Object run() throws Exception {
+                        return method.invoke(interceptors[index], invCtx);
+                    }
+                });
             } else {
 
-                 return method.invoke(interceptors[index], invCtx);
+                return method.invoke(interceptors[index], invCtx);
 
             }
         } catch (java.lang.reflect.InvocationTargetException invEx) {
@@ -885,8 +782,7 @@ class AroundInvokeInterceptor {
 
 }
 
-class BeanAroundInvokeInterceptor
-        extends AroundInvokeInterceptor {
+class BeanAroundInvokeInterceptor extends AroundInvokeInterceptor {
     private static final Object[] NULL_ARGS = null;
 
     BeanAroundInvokeInterceptor(Method method) {
@@ -897,16 +793,15 @@ class BeanAroundInvokeInterceptor
     Object intercept(final InterceptorManager.AroundInvokeContext invCtx) throws Throwable {
         try {
 
-            if( System.getSecurityManager() != null ) {
-            // Wrap actual value insertion in doPrivileged to
-            // allow for private/protected field access.
-            return java.security.AccessController
-                    .doPrivileged(new java.security.PrivilegedExceptionAction() {
-                        @Override
-                        public java.lang.Object run() throws Exception {
-                            return method.invoke(invCtx.getTarget(), invCtx);
-                        }
-                    });
+            if (System.getSecurityManager() != null) {
+                // Wrap actual value insertion in doPrivileged to
+                // allow for private/protected field access.
+                return java.security.AccessController.doPrivileged(new java.security.PrivilegedExceptionAction() {
+                    @Override
+                    public java.lang.Object run() throws Exception {
+                        return method.invoke(invCtx.getTarget(), invCtx);
+                    }
+                });
             } else {
                 return method.invoke(invCtx.getTarget(), invCtx);
             }
@@ -931,46 +826,42 @@ class CallbackInterceptor {
         this.method = method;
 
         try {
-        final Method finalM = method;
-        if(System.getSecurityManager() == null) {
-            if (!finalM.isAccessible()) {
-                finalM.setAccessible(true);
-            }
-        } else {
-            java.security.AccessController
-                    .doPrivileged(new java.security.PrivilegedExceptionAction() {
-                @Override
-                public java.lang.Object run() throws Exception {
-                    if (!finalM.isAccessible()) {
-                        finalM.setAccessible(true);
+            final Method finalM = method;
+            if (System.getSecurityManager() == null) {
+                if (!finalM.isAccessible()) {
+                    finalM.setAccessible(true);
+                }
+            } else {
+                java.security.AccessController.doPrivileged(new java.security.PrivilegedExceptionAction() {
+                    @Override
+                    public java.lang.Object run() throws Exception {
+                        if (!finalM.isAccessible()) {
+                            finalM.setAccessible(true);
+                        }
+                        return null;
                     }
-                    return null;
-                }});
-        }
-        } catch(Exception e) {
+                });
+            }
+        } catch (Exception e) {
             throw new EJBException(e);
         }
 
     }
 
-    Object intercept(final CallbackInvocationContext invContext)
-        throws Throwable {
+    Object intercept(final CallbackInvocationContext invContext) throws Throwable {
         try {
 
-            final Object[] interceptors = invContext
-                    .getInterceptorInstances();
+            final Object[] interceptors = invContext.getInterceptorInstances();
 
-            if( System.getSecurityManager() != null ) {
-            // Wrap actual value insertion in doPrivileged to
-            // allow for private/protected field access.
-            return java.security.AccessController
-                    .doPrivileged(new java.security.PrivilegedExceptionAction() {
-                        @Override
-                        public java.lang.Object run() throws Exception {
-                            return method.invoke(interceptors[index],
-                                                 invContext);
-                        }
-                    });
+            if (System.getSecurityManager() != null) {
+                // Wrap actual value insertion in doPrivileged to
+                // allow for private/protected field access.
+                return java.security.AccessController.doPrivileged(new java.security.PrivilegedExceptionAction() {
+                    @Override
+                    public java.lang.Object run() throws Exception {
+                        return method.invoke(interceptors[index], invContext);
+                    }
+                });
             } else {
                 return method.invoke(interceptors[index], invContext);
 
@@ -996,8 +887,7 @@ class CallbackInterceptor {
     }
 }
 
-class BeanCallbackInterceptor
-        extends CallbackInterceptor {
+class BeanCallbackInterceptor extends CallbackInterceptor {
     private static final Object[] NULL_ARGS = null;
 
     BeanCallbackInterceptor(Method method) {
@@ -1005,24 +895,21 @@ class BeanCallbackInterceptor
     }
 
     @Override
-    Object intercept(final CallbackInvocationContext invContext)
-        throws Throwable {
+    Object intercept(final CallbackInvocationContext invContext) throws Throwable {
         try {
 
-            if( System.getSecurityManager() != null ) {
-            // Wrap actual value insertion in doPrivileged to
-            // allow for private/protected field access.
-               java.security.AccessController
-                    .doPrivileged(new java.security.PrivilegedExceptionAction() {
-                        @Override
-                        public java.lang.Object run() throws Exception {
+            if (System.getSecurityManager() != null) {
+                // Wrap actual value insertion in doPrivileged to
+                // allow for private/protected field access.
+                java.security.AccessController.doPrivileged(new java.security.PrivilegedExceptionAction() {
+                    @Override
+                    public java.lang.Object run() throws Exception {
 
-                            method.invoke(invContext.getTarget(),
-                                          NULL_ARGS);
-                            return null;
+                        method.invoke(invContext.getTarget(), NULL_ARGS);
+                        return null;
 
-                        }
-                    });
+                    }
+                });
             } else {
                 method.invoke(invContext.getTarget(), NULL_ARGS);
             }
